contact opens in a _blank

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 		  
           <p>
             
-            <!--content goes here--><a href="https://www.google.com/+benpaddlejones">I'm here...</a></p>
+            <!--content goes here--><a href="https://www.google.com/+benpaddlejones" target="_blank">I'm here...</a></p>
 	    </div>
 	  </div>
     </div>
