--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 	    <div class="content-padding">
 		  <div class="content2-block">
 		    <h2>Site news</h2>
-		    <p>Site goes live 15/3/2015<a href="takeontheboss.html"></a></p>
 		    <p>CSS Updated 25/4/2015</p>
 		    <p>Upgraded server to Apache running on Synology infrastructure 01/05/2015</p>
+		    <p>We are now live in the Android Playstore 01/06/2015</p>
 		    <p>&nbsp;</p>
 		    <p>&nbsp;</p>
 		    <p>&nbsp;</p>
@@ -84,7 +84,7 @@
 		  <div class="content-divider"></div>
 		  <div class="content2-block">
 		    <h3>New Projects and Resources</h3>
-            <p><a href="rps-game/index.html">Rock Paper Scissors Game</a></p>
+            <p><a href="https://play.google.com/store/apps/details?id=com.penpaddlejones.platformer" target="_blank">Android Playstore Game</a></p>
             <p><a href="/webkiosk/index.html">Web kiosk example</a></p>
             <p><a href="/myplatformer/index.html">HTML5 Platformer Game</a></p>
             <p>&nbsp;</p>
