remove dropbox dependance

--- a/designprocess.html
+++ b/designprocess.html
@@ -61,8 +61,8 @@
 		  <p>Generating and developing ideas involves students exploring options, considering existing solutions, generating alternatives, representing and refining those ideas and deciding upon options. Students identify, explore and select resources such as techniques, materials and equipment that will best achieve the solution, taking into account short-term and long-term impacts of their decisions and actions.</p>
 		  <p>Producing solutions involves students finalising design decisions; completing final design representations such as production drawings or storyboards; sequencing the step-by-step actions for production; managing safety risks; practicing and refining techniques; and completing the production of the solution. Students reflect on the success of the solution, the process and the learning.</p>
 		  <p>Planning, managing and evaluating is an essential component of each of the above phases. Management decisions made by students involve planning and reviewing milestones and implementing and monitoring time, actions and financial plans. Ongoing evaluation, related to the criteria of success, informs the students’ decision making at each phase and the evaluation at the conclusion of the project involves reflection and learning about the process used and the success of the solution.</p>
-		  <p>Read more <a href="https://www.dropbox.com/s/xy7nf9ohy9x7lcr/designprocess.pptx?dl=0" target="_blank">here</a></p>
-		  <p>Download the design process template <a href="https://www.dropbox.com/s/mm9iad4v6j2q7b0/DesignProcessScaffold.onepkg?dl=0" target="_blank">here</a><br />
+		  <p>Read more <a href="files/designprocess.pptx" target="_blank">here</a></p>
+		  <p>Download the design process template <a href="files/DesignProcessScaffold.onepkg" target="_blank">here</a><br />
 	      </p>         
         
 	    </div>
