--- a/resources.html
+++ b/resources.html
@@ -69,6 +69,15 @@
           <p lang="en-US" xml:lang="en-US"><a href="byod_info.html">Bring your own device information &amp; guides</a> </p>
           <p lang="en-US" xml:lang="en-US"><a href="http://www.w3schools.com/default.asp" target="_blank">CSS, HTML &amp; HTML5 code examples and tutorials</a></p>
           <p lang="en-US" xml:lang="en-US"><a href="https://developer.apple.com/library/safari/documentation/audiovideo/conceptual/html-canvas-guide/Introduction/Introduction.html#//apple_ref/doc/uid/TP40010542-CH1-SW1" target="_blank">HTML5 Canvas &amp; Javascript code examples and tutorials</a></p>
+          <p lang="en-US" xml:lang="en-US"><a href="https://github.com/">GitHub</a> and <a href="/files/git_cheat_sheet.pdf">GIT Cheat sheet</a></p>
+         <ul>
+            <li>The CLI works through the proxy at school:
+            <pre>git config --global http.proxy http://username:password@proxy.det.nsw.edu.au:8080</pre>
+            <pre>git config --global https.proxy https://username:password@proxy.det.nsw.edu.au:8080</pre></li>
+            <li>To remove proxy for home access:
+            <pre>git config --global --unset http.proxy</pre>
+           <pre>git config --global --unset https.proxy</pre></li>
+          </ul>
           <p lang="en-US" xml:lang="en-US"><a href="https://msdn.microsoft.com/en-us/library/hh772704(v=vs.85).aspx">IE10 F12 Developer Tools (HTML, CSS &amp; JavaScript debugging support tools)</a></p>
           <p lang="en-US" xml:lang="en-US"><a href="http://cgcookie.com/blender/cgc-courses/blender-basics-introduction-for-beginners/" target="_blank">Blender 101</a></p>
           <p lang="en-US" xml:lang="en-US"><a href="files/SettingupBlenderforRealWorldDimensions.pdf" target="_blank">Setting up Blender for real world dimensions</a></p>
