minor edits and new links

--- a/resources.html
+++ b/resources.html
@@ -69,8 +69,8 @@
           <p lang="en-US" xml:lang="en-US"><a href="byod_info.html">Bring your own device information &amp; guides</a> </p>
           <p lang="en-US" xml:lang="en-US"><a href="http://www.w3schools.com/default.asp" target="_blank">CSS, HTML &amp; HTML5 code examples and tutorials</a></p>
           <p lang="en-US" xml:lang="en-US"><a href="https://developer.apple.com/library/safari/documentation/audiovideo/conceptual/html-canvas-guide/Introduction/Introduction.html#//apple_ref/doc/uid/TP40010542-CH1-SW1" target="_blank">HTML5 Canvas &amp; Javascript code examples and tutorials</a></p>
-          <p lang="en-US" xml:lang="en-US"><a href="https://github.com/">GitHub</a> and <a href="/files/git_cheat_sheet.pdf">GIT Cheat sheet</a></p>
-         <ul>
+          <p lang="en-US" xml:lang="en-US"><a href="https://github.com/">GitHub</a>, <a href="https://www.youtube.com/watch?v=0fKg7e37bQE">how to use GITHUB</a> and <a href="/files/git_cheat_sheet.pdf">GIT Cheat sheet</a></p>
+          <ul>
             <li>The CLI works through the proxy at school:
             <pre>git config --global http.proxy http://username:password@proxy.det.nsw.edu.au:8080</pre>
             <pre>git config --global https.proxy https://username:password@proxy.det.nsw.edu.au:8080</pre></li>
@@ -84,6 +84,7 @@
           <p lang="en-US" xml:lang="en-US">How to <a href="http://windows.microsoft.com/en-au/windows7/pin-a-program-to-the-taskbar" target="_blank">pin  applications to the task bar</a> for quick access</p>
           <p lang="en-US" xml:lang="en-US">How to use the <a href="http://windows.microsoft.com/en-au/windows7/products/features/snipping-tool" target="_blank">snip  tool for screen shots</a> <em>(this should be pinned to your task bar)</em></p>
           <p lang="en-US" xml:lang="en-US"><a href="Files/NSWDEC-web-accessibility-toolkit.pdf" target="_blank">NSWDEC Web Accessability Tool Kit</a></p>
+          <p lang="en-US" xml:lang="en-US"><a href="/gcroom.html">Google Classroom support resources</a></p>
           <p lang="en-US" xml:lang="en-US"><a href="http://www.gcflearnfree.org/office2010" target="new">How to use Microsoft  Office</a></p>
           <p lang="en-US" xml:lang="en-US"><a href="http://tv.adobe.com" target="_blank">Adobe TV</a></p>
           <p lang="en-US" xml:lang="en-US"><a href="http://www.sketchup.com/learn" target="_blank">Sketchup  tutorials</a></p>
