add Google Classroom resources

--- a/gcroom.html
+++ b/gcroom.html
@@ -53,7 +53,11 @@
 	  <div id="content" class="content-nonindex">
 	    <div class="content-padding">
 		  <h1>Google Classroom </h1>
-          <p>Content to be added</p>
+          <p>Classroom is a new tool in Google Apps for Education that helps teachers create and organize assignments quickly, provide feedback efficiently, and easily communicate with their classes. <a href="https://www.google.com/intl/en-US/edu/classroom/" target="_blank"></a></p>
+          <p>You can access Google Classroom with your school email firstname.lastname@education.nsw.gov.au (don't enter a password it will redirect you to the school login page, login then it will automatically return). If it says you are &quot;ineligible&quot; just choose the user menu (in the top right corner) to either add your education account or switch to it.          </p>
+          <p><img src="/images/gc_login.JPG" width="392" height="513" alt=""/></p>
+          <p>Watch this video for a quick introduction of how to use Google Classroom as a student:</p>
+          <iframe width="480" height="360" src="https://www.youtube.com/embed/Vyff9cR5RxU?rel=0" frameborder="0" allowfullscreen></iframe>
 	    </div>
 	  </div>
 </div>
